@@ -2,6 +2,7 @@ package org.variantsync.vevos.simulation;
 
 import de.ovgu.featureide.fm.core.base.IFeatureModel;
 import de.ovgu.featureide.fm.core.base.IFeatureModelElement;
+import org.junit.Assert;
 import org.junit.Test;
 import org.variantsync.vevos.simulation.variability.SPLCommit;
 
@@ -19,13 +20,17 @@ public class FeatureModelLoading {
 
     @Test
     public void fromVariables() throws IOException {
-        Path variablesPath = Path.of("src/test/java/org/variantsync/vevos/simulation/variability/TEST_VARIABLES.txt");
-        SPLCommit commit = new SPLCommit("aaaaa", null, null, new SPLCommit.FeatureModelPath(variablesPath), null, null, null);
+        Path variablesPath = Path.of(
+                        "src/test/java/org/variantsync/vevos/simulation/variability/TEST_VARIABLES.txt");
+        SPLCommit commit = new SPLCommit("aaaaa", null, null,
+                        new SPLCommit.FeatureModelPath(variablesPath), null, null, null, null, null, null,
+                        null);
         IFeatureModel featureModel = commit.featureModel().run().orElseThrow();
-        Collection<String> features = featureModel.getFeatures().stream().map(IFeatureModelElement::getName).collect(Collectors.toList());
-        assert features.size() == 5;
+        Collection<String> features = featureModel.getFeatures().stream()
+                        .map(IFeatureModelElement::getName).toList();
+        Assert.assertEquals(6, features.size());
         for (String feature : Files.readAllLines(variablesPath)) {
-            assert features.contains(feature);
+            Assert.assertTrue(features.contains(feature));
         }
     }
 }
